--- a/apps/system-tools/mdns-reflector/base/deployment.yaml
+++ b/apps/system-tools/mdns-reflector/base/deployment.yaml
@@ -42,7 +42,8 @@ spec:
                 echo "DBus socket not found, exiting"; exit 1
               fi
               # Starta Avahi i förgrunden med vår config
-              exec avahi-daemon -f /config/avahi-daemon.conf --no-drop-root --no-chroot --debug          volumeMounts:
+              exec avahi-daemon -f /config/avahi-daemon.conf --no-drop-root --no-chroot --debug
+          volumeMounts:
             - name: avahi-config
               mountPath: /config/avahi-daemon.conf
               subPath: avahi-daemon.conf
