--- a/apps/system-tools/mdns-reflector/base/deployment.yaml
+++ b/apps/system-tools/mdns-reflector/base/deployment.yaml
@@ -30,17 +30,22 @@ spec:
             - |
               set -eu
               export DEBIAN_FRONTEND=noninteractive
-              # Säkerställ katalogen och starta dbus
+              # Installera beroenden (idempotent), med enkel retry
+              (apt-get update && apt-get install -y --no-install-recommends \
+                 avahi-daemon avahi-utils dbus libnss-mdns ca-certificates) \
+              || (sleep 3 && apt-get update && apt-get install -y --no-install-recommends \
+                 avahi-daemon avahi-utils dbus libnss-mdns ca-certificates)
+              rm -rf /var/lib/apt/lists/*
+
+              # Starta system-dbus och vänta på socketen
               mkdir -p /run/dbus
               dbus-daemon --system --address=unix:path=/run/dbus/system_bus_socket
-              # Vänta på att dbus-socket finns (max ~10s)
               for i in $(seq 1 20); do
                 [ -S /run/dbus/system_bus_socket ] && break
                 sleep 0.5
               done
-              if [ ! -S /run/dbus/system_bus_socket ]; then
-                echo "DBus socket not found, exiting"; exit 1
-              fi
+              [ -S /run/dbus/system_bus_socket ] || { echo "DBus socket not found"; exit 1; }
+
               # Starta Avahi i förgrunden med vår config
               exec avahi-daemon -f /config/avahi-daemon.conf --no-drop-root --no-chroot --debug
           volumeMounts:
