--- a/apps/home-automation/homeassistant/base/deployment.yaml
+++ b/apps/home-automation/homeassistant/base/deployment.yaml
@@ -19,8 +19,19 @@ spec:
         io.kompose.service: homeassistant
     spec:
       hostNetwork: true
-      dnsPolicy: ClusterFirstWithHostNet
-      nodeSelector:
+      dnsPolicy: None                    # <-- viktiga bytet
+      dnsConfig:
+        nameservers:
+          - 10.43.0.10                   # CoreDNS ClusterIP
+          - 10.10.10.1                   # (valfritt) pfSense som fallback för internet
+        searches:
+          - home-automation.svc.cluster.local
+          - svc.cluster.local
+          - cluster.local
+        options:
+          - { name: ndots, value: "2" }
+          - { name: single-request-reopen }
+        nodeSelector:
         homelab/homeassistant: "true"
       containers:
         - name: homeassistant
