--- a/apps/home-automation/frigate/overlays/homelab/kustomization.yaml
+++ b/apps/home-automation/frigate/overlays/homelab/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: home-automation
+
+namespace: frigate
+
 resources:
   - ../../base
   - ingress.yaml
