--- a/apps/home-automation/frigate/base/configmap.yaml
+++ b/apps/home-automation/frigate/base/configmap.yaml
@@ -5,28 +5,75 @@ metadata:
 data:
   config.yml: |
     mqtt:
-      host: mosquitto.homeassistant.svc.cluster.local
-      port: 1883
-      topic_prefix: frigate
+      enabled: true
+      host: mosquitto
       user: ha
-      password: superhemligt
+      password: CHANGEME
+      port: 1883
+
+    ffmpeg:
+      global_args: -hide_banner -loglevel warning
+      input_args: preset-rtsp-generic
+
+    detect:
+      enabled: false
+
     database:
       path: /db/frigate.db
-    detectors:
-      cpu1:
-        type: cpu
-    ffmpeg:
-      hwaccel_args: []
-    go2rtc:
-      streams: {}
+
+    record:
+      enabled: true
+      retain:
+        days: 2
+        mode: motion
+      alerts:
+        retain:
+          days: 2
+      detections:
+        retain:
+          days: 2
+    snapshots:
+      enabled: true
+      retain:
+        default: 5
+
+    timestamp_style:
+      format: '%Y-%m-%d %H:%M:%S'
+
     cameras:
-      example_cam:
-        enabled: false
+      camera1:
         ffmpeg:
           inputs:
-            - path: rtsp://user:pass@192.168.1.10:554/stream1
-              roles: [detect,record]
-        detect:
-          width: 1280
-          height: 720
-          fps: 5
+            - path: rtsp://mberggren:Agnes2001@10.10.50.100/stream1
+              roles:
+                - record
+      camera2:
+        ffmpeg:
+          inputs:
+            - path: rtsp://root:ismart12@dafang.home.arpa:8554/unicast
+              roles:
+                - record
+        motion:
+          threshold: 50
+          contour_area: 10
+          improve_contrast: true
+      camera3:
+        ffmpeg:
+          inputs:
+            - path: rtsp://admin:785981@10.10.50.107/live/profile.0
+              roles:
+                - record
+      camera4:
+        ffmpeg:
+          inputs:
+            - path: 
+                rtsp://admin:Agnes2001!@doorbell.home.arpa:554/cam/realmonitor?channel=1&subtype=0
+              roles:
+                - record
+        motion:
+          threshold: 40
+          contour_area: 10
+          improve_contrast: true
+    version: 0.16-0
+    camera_groups: {}
+
