--- a/apps/home-automation/frigate/base/pvcs.yaml
+++ b/apps/home-automation/frigate/base/pvcs.yaml
@@ -1,6 +1,17 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: frigate-config
+spec:
+  accessModes: ["ReadWriteOnce"]
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: longhorn
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: frigate-db
 spec:
   accessModes: ["ReadWriteOnce"]
