Fix typo in deployment.yaml: corrected 'conigMap' to 'configMap'

--- a/apps/home-automation/frigate/base/deployment.yaml
+++ b/apps/home-automation/frigate/base/deployment.yaml
@@ -43,7 +43,7 @@ spec:
               memory: "4Gi"
       volumes:
         - name: config-file
-          conigMap:
+          configMap:
             name: frigate-config
         - name: config
           persistentVolumeClaim:
