Fix config file extension in ConfigMap from 'config.yml' to 'config.yaml'

--- a/apps/home-automation/frigate/base/configmap.yaml
+++ b/apps/home-automation/frigate/base/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: frigate-config
 data:
-  config.yml: |
+  config.yaml: |
     mqtt:
       enabled: true
       host: mosquitto
