feat: Add Tactical RMM support with ConfigMap, Ingress, and Deployments
- Updated kustomization.yaml to include new resources for Tactical RMM.
- Created ConfigMap for Tactical RMM configuration.
- Added Ingress resource for routing traffic to Tactical RMM services.
- Implemented ClusterIssuer for Let's Encrypt with Cloudflare DNS.
- Defined StatefulSet and Service for PostgreSQL with persistent storage.
- Added Redis deployment and service.
- Created Deployments for RMM API, Daphne, Nginx, Celery, and Celerybeat.
- Introduced MeshCentral service and deployment.
- Configured ExternalSecrets for managing sensitive data from Vault.
- Updated ArgoCD ApplicationSet and AppProject for support applications.
- Added storage class patches for persistent volume claims.

--- a/clusters/homelab/root/kustomization.yaml
+++ b/clusters/homelab/root/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
   - applicationsets/home-automation.yaml
   - projects/project-system-tools.yaml
   - applicationsets/system-tools.yaml
+  - projects/project-support.yaml
+  - applicationsets/support.yaml
