--- a/clusters/homelab/root/applicationsets/system-tools.yaml
+++ b/clusters/homelab/root/applicationsets/system-tools.yaml
@@ -22,6 +22,8 @@ spec:
         repoURL: https://github.com/MatsBerggren/gitops
         targetRevision: main
         path: '{{path}}/overlays/homelab'
+        kustomize:
+          enableHelm: true
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
