--- a/clusters/homelab/root/applicationsets/system-tools.yaml
+++ b/clusters/homelab/root/applicationsets/system-tools.yaml
@@ -23,7 +23,7 @@ spec:
         targetRevision: main
         path: '{{path}}/overlays/homelab'
         kustomize:
-          enableHelm: true
+          buildOptions: --enable-helm
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
