--- a/apps/support/tactical-rmm/base/rmm-daphne.yaml
+++ b/apps/support/tactical-rmm/base/rmm-daphne.yaml
@@ -20,6 +20,8 @@ spec:
     metadata:
       labels: { app: rmm-daphne }
     spec:
+      imagePullSecrets:
+        - name: ghcr-cred
       containers:
         - name: daphne
           image: ghcr.io/amidaware/tacticalrmm-daphne:latest
