--- a/apps/support/tactical-rmm/base/rmm-nginx.yaml
+++ b/apps/support/tactical-rmm/base/rmm-nginx.yaml
@@ -20,6 +20,8 @@ spec:
     metadata:
       labels: { app: rmm-nginx }
     spec:
+      imagePullSecrets:
+        - name: ghcr-cred
       containers:
         - name: nginx
           image: ghcr.io/amidaware/tacticalrmm-nginx:latest
