--- a/apps/support/tactical-rmm/base/rmm-nginx.yaml
+++ b/apps/support/tactical-rmm/base/rmm-nginx.yaml
@@ -24,7 +24,7 @@ spec:
         - name: ghcr-cred
       containers:
         - name: nginx
-          image: ghcr.io/amidaware/tacticalrmm-nginx:latest
+          image: tacticalrmm/tactical-nginx:latest
           envFrom:
             - configMapRef: { name: tactical-rmm-config }
           ports:
