--- a/apps/support/tactical-rmm/base/rmm-celery.yaml
+++ b/apps/support/tactical-rmm/base/rmm-celery.yaml
@@ -14,7 +14,7 @@ spec:
         - name: ghcr-cred
       containers:
         - name: celery
-          image: ghcr.io/amidaware/tacticalrmm-celery:latest
+          image: tacticalrmm/tactical:latest
           envFrom:
             - configMapRef: { name: tactical-rmm-config }
             - secretRef: { name: tactical-rmm-secret }
