--- a/apps/support/tactical-rmm/base/rmm-api.yaml
+++ b/apps/support/tactical-rmm/base/rmm-api.yaml
@@ -24,7 +24,7 @@ spec:
         - name: ghcr-cred
       containers:
         - name: rmm-api
-          image: ghcr.io/amidaware/tacticalrmm:latest
+          image: tacticalrmm/tactical:latest
           envFrom:
             - configMapRef: { name: tactical-rmm-config }
             - secretRef: { name: tactical-rmm-secret }
