Refactor Tactical RMM Kubernetes manifests for improved organization and naming conventions
- Updated PostgreSQL configuration to use a StatefulSet with a new name and environment variables.
- Migrated Redis configuration to a Deployment with updated image and environment settings.
- Removed obsolete RMM API, Celery, Daphne, Nginx, and related configurations.
- Introduced new ConfigMap and Secret for environment variables and sensitive data management.
- Added PersistentVolumeClaims for PostgreSQL, Redis, MongoDB, and application data.
- Created new deployments for backend, frontend, celery, celerybeat, websockets, and NATS services.
- Updated external secrets configuration to sync with a new Vault setup.
- Adjusted service definitions to reflect new naming conventions and improved structure.
- Enhanced storage class configurations for better resource management.

--- a/apps/support/tactical-rmm/base/kustomization.yaml
+++ b/apps/support/tactical-rmm/base/kustomization.yaml
@@ -4,13 +4,20 @@ namespace: tactical-rmm
 
 resources:
   - namespace.yaml
-  - configmap-app.yaml
+  - configmap-env.yaml
+  - secret-env.yaml
+  - storage.yaml
   - postgres.yaml
   - redis.yaml
+  - mongodb.yaml
+  - nats.yaml
   - meshcentral.yaml
-  - rmm-api.yaml
-  - rmm-daphne.yaml
-  - rmm-celery.yaml
-  - rmm-celerybeat.yaml
-  - rmm-nginx.yaml
+  - backend.yaml
+  - websockets.yaml
+  - celery.yaml
+  - celerybeat.yaml
+  - frontend.yaml
+  - nginx.yaml
+  - init-job.yaml
+  - services.yaml
   - ingress.yaml
