--- a/apps/support/tactical-rmm/overlays/eso-vault/externalsecret.yaml
+++ b/apps/support/tactical-rmm/overlays/eso-vault/externalsecret.yaml
@@ -1,49 +1,33 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: tactical-rmm-secret
+  name: trmm-secrets-sync
 spec:
   refreshInterval: 1h
   secretStoreRef:
-    name: vault
     kind: SecretStore
+    name: trmm-vault-store
   target:
-    name: tactical-rmm-secret
-    creationPolicy: Owner
+    name: trmm-secrets
+    creationPolicy: Merge
   data:
-    - secretKey: DJANGO_SECRET_KEY
-      remoteRef:
-        key: kv/tactical-rmm/dev/app
-        property: DJANGO_SECRET_KEY
-    - secretKey: DB_NAME
-      remoteRef:
-        key: kv/tactical-rmm/dev/db
-        property: DB_NAME
-    - secretKey: DB_USER
-      remoteRef:
-        key: kv/tactical-rmm/dev/db
-        property: DB_USER
-    - secretKey: DB_PASSWORD
-      remoteRef:
-        key: kv/tactical-rmm/dev/db
-        property: DB_PASSWORD
-    - secretKey: DB_HOST
-      remoteRef:
-        key: kv/tactical-rmm/dev/db
-        property: DB_HOST
-    - secretKey: DB_PORT
-      remoteRef:
-        key: kv/tactical-rmm/dev/db
-        property: DB_PORT
-    - secretKey: REDIS_HOST
-      remoteRef:
-        key: kv/tactical-rmm/dev/redis
-        property: REDIS_HOST
-    - secretKey: REDIS_PORT
-      remoteRef:
-        key: kv/tactical-rmm/dev/redis
-        property: REDIS_PORT
-    - secretKey: CLOUDFLARE_API_TOKEN
-      remoteRef:
-        key: kv/tactical-rmm/dev/cloudflare
-        property: CLOUDFLARE_API_TOKEN
+  - secretKey: TRMM_USER
+    remoteRef: { key: trmm/secrets, property: TRMM_USER }
+  - secretKey: TRMM_PASS
+    remoteRef: { key: trmm/secrets, property: TRMM_PASS }
+  - secretKey: POSTGRES_USER
+    remoteRef: { key: trmm/secrets, property: POSTGRES_USER }
+  - secretKey: POSTGRES_PASS
+    remoteRef: { key: trmm/secrets, property: POSTGRES_PASS }
+  - secretKey: MONGODB_USER
+    remoteRef: { key: trmm/secrets, property: MONGODB_USER }
+  - secretKey: MONGODB_PASSWORD
+    remoteRef: { key: trmm/secrets, property: MONGODB_PASSWORD }
+  - secretKey: MESH_USER
+    remoteRef: { key: trmm/secrets, property: MESH_USER }
+  - secretKey: MESH_PASS
+    remoteRef: { key: trmm/secrets, property: MESH_PASS }
+  - secretKey: CERT_PUB_KEY
+    remoteRef: { key: trmm/secrets, property: CERT_PUB_KEY }
+  - secretKey: CERT_PRIV_KEY
+    remoteRef: { key: trmm/secrets, property: CERT_PRIV_KEY }
