--- a/apps/support/tactical-rmm/overlays/eso-vault/patch-hosts.yaml
+++ b/apps/support/tactical-rmm/overlays/eso-vault/patch-hosts.yaml
@@ -1,9 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: tactical-rmm-config
+  name: trmm-config
 data:
-  DJANGO_ALLOWED_HOSTS: "rmm.support4u.se,api.rmm.support4u.se"
-  RMM_URL: "https://rmm.support4u.se"
-  API_URL: "https://api.rmm.support4u.se"
-  MESH_HOST: "https://mesh.support4u.se"
+  APP_HOST: "rmm.example.com"
+  API_HOST: "api.example.com"
+  MESH_HOST: "mesh.example.com"
