--- a/apps/support/tactical-rmm/base/ingress.yaml
+++ b/apps/support/tactical-rmm/base/ingress.yaml
@@ -1,49 +1,40 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: tactical-rmm
+  name: trmm-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt-dns"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    # If you want to *terminate TLS at the Ingress*, create a TLS secret and uncomment the tls section below.
+    # Otherwise, leave TLS to tactical-nginx and use the LoadBalancer service.
 spec:
-  ingressClassName: nginx
-  tls:
-    - hosts: ["rmm.support4u.se"]
-      secretName: rmm-tls
-    - hosts: ["api.rmm.support4u.se"]
-      secretName: rmm-api-tls
-    - hosts: ["mesh.support4u.se"]
-      secretName: mesh-tls
   rules:
-    - host: rmm.support4u.se
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: rmm-web
-                port:
-                  number: 8080
-    - host: api.rmm.support4u.se
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: rmm-api
-                port:
-                  number: 8000
-    - host: mesh.support4u.se
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: meshcentral
-                port:
-                  number: 443
+  - host: rmm.example.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: trmm-nginx-svc
+            port: { number: 80 }
+  - host: api.example.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: trmm-nginx-svc
+            port: { number: 80 }
+  - host: mesh.example.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: trmm-nginx-svc
+            port: { number: 80 }
+  # tls:
+  # - hosts: ["rmm.example.com","api.example.com","mesh.example.com"]
+  #   secretName: trmm-wildcard-tls
