--- a/apps/support/tactical-rmm/base/postgres.yaml
+++ b/apps/support/tactical-rmm/base/postgres.yaml
@@ -1,69 +1,46 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: postgres
-spec:
-  ports:
-    - name: pg
-      port: 5432
-  selector:
-    app: postgres
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgres
+  name: trmm-postgres
 spec:
-  serviceName: postgres
+  serviceName: trmm-postgres
   replicas: 1
   selector:
-    matchLabels:
-      app: postgres
+    matchLabels: { app: trmm-postgres }
   template:
     metadata:
-      labels:
-        app: postgres
+      labels: { app: trmm-postgres }
     spec:
       containers:
-        - name: postgres
-          image: bitnami/postgresql:16
-          env:
-            - name: POSTGRESQL_DATABASE
-              valueFrom: { secretKeyRef: { name: tactical-rmm-secret, key: DB_NAME } }
-            - name: POSTGRESQL_USERNAME
-              valueFrom: { secretKeyRef: { name: tactical-rmm-secret, key: DB_USER } }
-            - name: POSTGRESQL_PASSWORD
-              valueFrom: { secretKeyRef: { name: tactical-rmm-secret, key: DB_PASSWORD } }
-          ports:
-            - containerPort: 5432
-          volumeMounts:
-            - name: data
-              mountPath: /bitnami/postgresql
-          livenessProbe:
-            exec:
-              command: ["sh", "-c", "pg_isready -U $POSTGRESQL_USERNAME -d $POSTGRESQL_DATABASE -h 127.0.0.1 -p 5432"]
-            initialDelaySeconds: 20
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 6
-          readinessProbe:
-            exec:
-              command: ["sh", "-c", "pg_isready -U $POSTGRESQL_USERNAME -d $POSTGRESQL_DATABASE -h 127.0.0.1 -p 5432"]
-            initialDelaySeconds: 10
-            periodSeconds: 10
-            timeoutSeconds: 5
-          resources:
-            requests:
-              cpu: "100m"
-              memory: "512Mi"
-            limits:
-              cpu: "1"
-              memory: "2Gi"
-  volumeClaimTemplates:
-    - metadata:
-        name: data
-      spec:
-        accessModes: ["ReadWriteOnce"]
-        resources:
-          requests:
-            storage: 20Gi
+      - name: postgres
+        image: postgres:13-alpine
+        env:
+        - name: POSTGRES_DB
+          value: "tacticalrmm"
+        - name: POSTGRES_USER
+          valueFrom: { secretKeyRef: { name: trmm-secrets, key: POSTGRES_USER } }
+        - name: POSTGRES_PASSWORD
+          valueFrom: { secretKeyRef: { name: trmm-secrets, key: POSTGRES_PASS } }
+        ports: [{ name: pg, containerPort: 5432 }]
+        volumeMounts:
+        - name: data
+          mountPath: /var/lib/postgresql/data
+        readinessProbe:
+          exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d tacticalrmm -h 127.0.0.1 -p 5432"] }
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        livenessProbe:
+          exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d tacticalrmm -h 127.0.0.1 -p 5432"] }
+          initialDelaySeconds: 20
+          periodSeconds: 10
+      volumes:
+      - name: data
+        persistentVolumeClaim: { claimName: trmm-postgres-pvc }
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: trmm-postgres
+spec:
+  selector: { app: trmm-postgres }
+  ports: [{ name: pg, port: 5432, targetPort: 5432 }]
