--- a/apps/support/tactical-rmm/base/redis.yaml
+++ b/apps/support/tactical-rmm/base/redis.yaml
@@ -1,46 +1,31 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis
-spec:
-  ports:
-    - name: redis
-      port: 6379
-  selector:
-    app: redis
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis
+  name: trmm-redis
 spec:
   replicas: 1
   selector:
-    matchLabels: { app: redis }
+    matchLabels: { app: trmm-redis }
   template:
     metadata:
-      labels: { app: redis }
+      labels: { app: trmm-redis }
     spec:
       containers:
-        - name: redis
-          image: bitnami/redis:7.2
-          env:
-            - name: ALLOW_EMPTY_PASSWORD
-              value: "yes"
-          ports:
-            - containerPort: 6379
-          livenessProbe:
-            tcpSocket: { port: 6379 }
-            initialDelaySeconds: 10
-            periodSeconds: 10
-          readinessProbe:
-            tcpSocket: { port: 6379 }
-            initialDelaySeconds: 5
-            periodSeconds: 10
-          resources:
-            requests:
-              cpu: "50m"
-              memory: "128Mi"
-            limits:
-              cpu: "500m"
-              memory: "512Mi"
+      - name: redis
+        image: redis:6.0-alpine
+        command: ["redis-server"]
+        ports: [{ name: redis, containerPort: 6379 }]
+        volumeMounts:
+        - name: data
+          mountPath: /data
+      volumes:
+      - name: data
+        persistentVolumeClaim: { claimName: trmm-redis-pvc }
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: trmm-redis
+spec:
+  selector: { app: trmm-redis }
+  ports: [{ name: redis, port: 6379, targetPort: 6379 }]
