--- a/apps/support/tactical-rmm/overlays/eso-vault/secretstore.yaml
+++ b/apps/support/tactical-rmm/overlays/eso-vault/secretstore.yaml
@@ -1,21 +1,14 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: eso-vault-auth
----
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
-  name: vault
+  name: trmm-vault-store
 spec:
   provider:
     vault:
-      server: https://openbao.support4u.se
-      path: homelab
+      server: https://vault.example.com
+      path: kv
       version: v2
       auth:
         kubernetes:
           mountPath: kubernetes
-          role: tactical-rmm
-          serviceAccountRef:
-            name: eso-vault-auth
+          role: trmm
