fix: Update image references to use docker.io/tacticalrmm with latest tags and adjust hostnames in config maps

--- a/apps/support/tactical-rmm/base/backend.yaml
+++ b/apps/support/tactical-rmm/base/backend.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: "$(IMAGE_REPO)tactical:$(VERSION)"
+        image: docker.io/tacticalrmm/tactical:latest
         command: ["tactical-backend"]
         envFrom:
         - configMapRef: { name: trmm-config }
