--- a/apps/support/tactical-rmm/overlays/eso-vault/secretstore.yaml
+++ b/apps/support/tactical-rmm/overlays/eso-vault/secretstore.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: https://vault.example.com
+      server: https://openbao.support4u.se
       path: kv
       version: v2
       auth:
