--- a/apps/support/tactical-rmm/base/celery.yaml
+++ b/apps/support/tactical-rmm/base/celery.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: celery
-        image: "$(IMAGE_REPO)tactical:$(VERSION)"
+        image: docker.io/tacticalrmm/tactical:latest
         command: ["tactical-celery"]
         env:
         - name: REDIS_HOST
