--- a/apps/support/tactical-rmm/base/configmap-env.yaml
+++ b/apps/support/tactical-rmm/base/configmap-env.yaml
@@ -17,7 +17,5 @@ data:
   TRMM_DISABLE_SSO: "1"
 
   # Image version tag; change to a concrete release like "v1.2.0" if desired
-  VERSION: "latest"
 
-  # Optional: set to "$(IMAGE_REPO)" (default). You can fork or mirror if needed.
-  IMAGE_REPO: "docker.io/tacticalrmm/"
+  # Optional: set to "" (default). You can fork or mirror if needed.
