--- a/apps/support/tactical-rmm/base/meshcentral.yaml
+++ b/apps/support/tactical-rmm/base/meshcentral.yaml
@@ -14,7 +14,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: meshcentral
-        image: "$(IMAGE_REPO)tactical-meshcentral:$(VERSION)"
+        image: docker.io/tacticalrmm/tactical-meshcentral:latest
         env:
         - name: MESH_HOST
           valueFrom: { configMapKeyRef: { name: trmm-config, key: MESH_HOST } }
