--- a/apps/support/tactical-rmm/base/configmap-env.yaml
+++ b/apps/support/tactical-rmm/base/configmap-env.yaml
@@ -7,9 +7,9 @@ data:
   LOG_LEVEL: "INFO"
 
   # Hostnames (FQDNs). All must be same wildcard level per upstream docs.
-  APP_HOST: "rmm.example.com"
-  API_HOST: "api.example.com"
-  MESH_HOST: "mesh.example.com"
+  APP_HOST: "rmm.support4u.se"
+  API_HOST: "api.rmm.support4u.se"
+  MESH_HOST: "mesh.support4u.se"
 
   # Feature toggles (string "0" or "1")
   TRMM_DISABLE_WEB_TERMINAL: "0"
