--- a/apps/support/tactical-rmm/base/ingress.yaml
+++ b/apps/support/tactical-rmm/base/ingress.yaml
@@ -17,7 +17,7 @@ spec:
           service:
             name: trmm-nginx-svc
             port: { number: 80 }
-  - host: api.example.com
+  - host: api.rmm.support4u.se
     http:
       paths:
       - path: /
@@ -26,7 +26,7 @@ spec:
           service:
             name: trmm-nginx-svc
             port: { number: 80 }
-  - host: mesh.example.com
+  - host: mesh.support4u.se
     http:
       paths:
       - path: /
@@ -36,5 +36,5 @@ spec:
             name: trmm-nginx-svc
             port: { number: 80 }
   # tls:
-  # - hosts: ["rmm.support4u.se","api.rmm.support4u.se","mesh.example.com", "mesh.support4u.se"]
+  # - hosts: ["rmm.support4u.se","api.rmm.support4u.se","mesh.support4u.se", "mesh.support4u.se"]
   #   secretName: trmm-wildcard-tls
