fix: Add PGDATA environment variable to PostgreSQL StatefulSet

--- a/apps/support/tactical-rmm/base/postgres.yaml
+++ b/apps/support/tactical-rmm/base/postgres.yaml
@@ -21,6 +21,8 @@ spec:
           valueFrom: { secretKeyRef: { name: trmm-secrets, key: POSTGRES_USER } }
         - name: POSTGRES_PASSWORD
           valueFrom: { secretKeyRef: { name: trmm-secrets, key: POSTGRES_PASS } }
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata
         ports: [{ name: pg, containerPort: 5432 }]
         volumeMounts:
         - name: data
