--- a/apps/support/tactical-rmm/base/postgres.yaml
+++ b/apps/support/tactical-rmm/base/postgres.yaml
@@ -21,12 +21,11 @@ spec:
           valueFrom: { secretKeyRef: { name: trmm-secrets, key: POSTGRES_USER } }
         - name: POSTGRES_PASSWORD
           valueFrom: { secretKeyRef: { name: trmm-secrets, key: POSTGRES_PASS } }
-        - name: PGDATA
-          value: /var/lib/postgresql/data/pgdata
         ports: [{ name: pg, containerPort: 5432 }]
         volumeMounts:
         - name: data
           mountPath: /var/lib/postgresql/data
+          subPath: pgdata
         readinessProbe:
           exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d tacticalrmm -h 127.0.0.1 -p 5432"] }
           initialDelaySeconds: 10
