fix: Comment out command for backend container in deployment

--- a/apps/support/tactical-rmm/base/backend.yaml
+++ b/apps/support/tactical-rmm/base/backend.yaml
@@ -13,7 +13,7 @@ spec:
       containers:
       - name: backend
         image: docker.io/tacticalrmm/tactical:latest
-        command: ["tactical-backend"]
+        # command: ["tactical-backend"]
         envFrom:
         - configMapRef: { name: trmm-config }
         - secretRef: { name: trmm-secrets }
