--- a/apps/support/tactical-rmm/base/backend.yaml
+++ b/apps/support/tactical-rmm/base/backend.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: docker.io/tacticalrmm/tactical:latest
+        image: docker.io/tacticalrmm/tactical:1.2.0
         # command: ["tactical-backend"]
         envFrom:
         - configMapRef: { name: trmm-config }
