fix: Update all deployments to use tactical image version 1.2.0

--- a/apps/support/tactical-rmm/base/celery.yaml
+++ b/apps/support/tactical-rmm/base/celery.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: celery
-        image: docker.io/tacticalrmm/tactical:latest
+        image: docker.io/tacticalrmm/tactical:1.2.0
         command: ["tactical-celery"]
         env:
         - name: REDIS_HOST
