--- a/apps/support/tactical-rmm/base/init-job.yaml
+++ b/apps/support/tactical-rmm/base/init-job.yaml
@@ -11,7 +11,7 @@ spec:
       restartPolicy: OnFailure
       containers:
       - name: trmm-init
-        image: docker.io/tacticalrmm/tactical:latest
+        image: docker.io/tacticalrmm/tactical:1.2.0
         command: ["tactical-init"]
         envFrom:
         - configMapRef: { name: trmm-config }
