--- a/apps/support/tactical-rmm/base/backend.yaml
+++ b/apps/support/tactical-rmm/base/backend.yaml
@@ -5,19 +5,14 @@ metadata:
 spec:
   replicas: 1
   selector:
-    matchLabels: { app: trmm-backend }
+    matchLabels:
+      app: trmm-backend
   template:
     metadata:
-      labels: { app: trmm-backend }
+      labels:
+        app: trmm-backend
     spec:
       containers:
       - name: backend
         image: docker.io/tacticalrmm/tactical:1.2.0
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: trmm-backend
-spec:
-  selector: { app: trmm-backend }
-  ports: [{ name: http, port: 8000, targetPort: 8000 }]
+        command: ["sleep", "infinity"]
