--- a/apps/support/tactical-rmm/base/deploy-meshcentral.yaml
+++ b/apps/support/tactical-rmm/base/deploy-meshcentral.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: meshcentral
-        image: docker.io/ylianst/meshcentral:1.1.21
+        image: docker.io/tacticalrmm/meshcentral:1.1.21
         ports:
         - name: https
           containerPort: 4443
