--- a/apps/support/tactical-rmm/base/deploy-celery.yaml
+++ b/apps/support/tactical-rmm/base/deploy-celery.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: celery
-        image: docker.io/tacticalrmm/tactical:v1.2.0
+        image: docker.io/tacticalrmm/tactical:1.2.0
         args: ["tactical-celery"]
         envFrom:
         - configMapRef: { name: trmm-config }
