--- a/apps/support/tactical-rmm/base/deploy-frontend.yaml
+++ b/apps/support/tactical-rmm/base/deploy-frontend.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: docker.io/tacticalrmm/tactical-nginx:v1.2.0
+        image: docker.io/tacticalrmm/tactical-nginx:1.2.0
         ports:
         - name: http
           containerPort: 80
