--- a/apps/support/tactical-rmm/base/deploy-meshcentral.yaml
+++ b/apps/support/tactical-rmm/base/deploy-meshcentral.yaml
@@ -11,6 +11,24 @@ spec:
     metadata:
       labels: { app: meshcentral }
     spec:
+      initContainers:
+      - name: mesh-init
+        image: busybox:1.36
+        command: ["sh","-lc"]
+        args:
+        - >
+          set -eux;
+          mkdir -p /home/node/app/meshcentral-data;
+          cp -f /config/config.json /home/node/app/meshcentral-data/config.json;
+          chown -R 1000:1000 /home/node/app/meshcentral-data
+        securityContext:
+          runAsUser: 0
+          runAsGroup: 0
+        volumeMounts:
+        - name: mesh-data
+          mountPath: /home/node/app/meshcentral-data
+        - name: mesh-config
+          mountPath: /config
       containers:
       - name: meshcentral
         image: docker.io/tacticalrmm/tactical-meshcentral:1.2.0
@@ -23,8 +41,7 @@ spec:
         - name: mesh-data
           mountPath: /home/node/app/meshcentral-data
         - name: mesh-config
-          mountPath: /home/node/app/meshcentral-data/config.json
-          subPath: config.json
+          mountPath: /config
       volumes:
       - name: mesh-data
         persistentVolumeClaim:
