--- a/apps/support/tactical-rmm/base/deploy-frontend.yaml
+++ b/apps/support/tactical-rmm/base/deploy-frontend.yaml
@@ -11,6 +11,21 @@ spec:
     metadata:
       labels: { app: trmm-frontend }
     spec:
+      initContainers:
+      - name: frontend-init
+        image: busybox:1.36
+        command: ["sh","-lc"]
+        args:
+        - >
+          set -eux;
+          mkdir -p /opt/tactical/certs;
+          chown -R 1000:1000 /opt/tactical || true
+        securityContext:
+          runAsUser: 0
+          runAsGroup: 0
+        volumeMounts:
+        - name: trmm-data
+          mountPath: /opt/tactical
       containers:
       - name: frontend
         image: docker.io/tacticalrmm/tactical-nginx:1.2.0
@@ -20,3 +35,10 @@ spec:
         envFrom:
         - configMapRef: { name: trmm-config }
         - secretRef:    { name: trmm-secrets }
+        volumeMounts:
+        - name: trmm-data
+          mountPath: /opt/tactical
+      volumes:
+      - name: trmm-data
+        persistentVolumeClaim:
+          claimName: trmm-data-pvc
