--- a/apps/support/tactical-rmm/overlays/homelab/ingress.yaml
+++ b/apps/support/tactical-rmm/overlays/homelab/ingress.yaml
@@ -1,21 +1,12 @@
-# ingress.yaml
+# ingress som mappar dina domäner
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: tactical-rmm-ingress
-  namespace: tactical-rmm
+  namespace: support
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/proxy-preserve-host: "true"
-    # Om du behöver SSL-redirect/force HTTPS, avkommentera nedan:
-    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    kubernetes.io/ingress.class: nginx
 spec:
-  tls:
-    - hosts:
-        - rmm.support4u.se
-        - api.support4u.se
-        - mesh.support4u.se
-      secretName: rmm-tls
   rules:
     - host: rmm.support4u.se
       http:
@@ -26,7 +17,7 @@ spec:
               service:
                 name: tactical-rmm-external
                 port:
-                  name: https
+                  number: 80
     - host: api.support4u.se
       http:
         paths:
@@ -36,7 +27,7 @@ spec:
               service:
                 name: tactical-rmm-external
                 port:
-                  name: https
+                  number: 80
     - host: mesh.support4u.se
       http:
         paths:
@@ -46,4 +37,4 @@ spec:
               service:
                 name: tactical-rmm-external
                 port:
-                  name: https
+                  number: 80
