--- a/apps/support/tactical-rmm/base/service.yaml
+++ b/apps/support/tactical-rmm/base/service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tactical-rmm-external
-  namespace: support
+  namespace: tactical-rmm
 spec:
   type: ExternalName
   externalName: 10.10.20.100  # <-- IP till din VM
