--- a/apps/support/tactical-rmm/overlays/homelab/ingress.yaml
+++ b/apps/support/tactical-rmm/overlays/homelab/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: tactical-rmm-ingress
-  namespace: support
+  namespace: tactical-rmm
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
