--- a/apps/support/tactical-rmm/base/kustomization.yaml
+++ b/apps/support/tactical-rmm/base/kustomization.yaml
@@ -1,6 +1,9 @@
-# kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+namespace: tactical-rmm
+
 resources:
-  - namespace.yaml
   - service.yaml
+  - endpoints.yaml
+  - ingress.yaml
