--- a/apps/support/tactical-rmm/base/endpoints.yaml
+++ b/apps/support/tactical-rmm/base/endpoints.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: Endpoints
 metadata:
   name: tactical-rmm-external
+  namespace: tactical-rmm
 subsets:
   - addresses:
-      - ip: 10.10.20.100   # <- IP till din Proxmox-VM
+      - ip: 10.10.20.100
     ports:
-      - port: 80
-        name: http
       - port: 443
         name: https
