--- a/apps/support/tactical-rmm/base/service.yaml
+++ b/apps/support/tactical-rmm/base/service.yaml
@@ -2,13 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tactical-rmm-external
-  labels:
-    app: tactical-rmm
+  namespace: tactical-rmm
 spec:
   ports:
-    - port: 80
-      targetPort: 80
-      name: http
     - port: 443
       targetPort: 443
       name: https
