--- a/apps/support/tactical-rmm/overlays/homelab/ingress.yaml
+++ b/apps/support/tactical-rmm/overlays/homelab/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: tactical-rmm-ingress
+  namespace: tactical-rmm
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
@@ -15,7 +16,7 @@ spec:
               service:
                 name: tactical-rmm-external
                 port:
-                  number: 80
+                  number: 443
     - host: api.support4u.se
       http:
         paths:
@@ -25,7 +26,7 @@ spec:
               service:
                 name: tactical-rmm-external
                 port:
-                  number: 80
+                  number: 443
     - host: mesh.support4u.se
       http:
         paths:
@@ -35,4 +36,4 @@ spec:
               service:
                 name: tactical-rmm-external
                 port:
-                  number: 80
+                  number: 443
