--- a/apps/support/tactical-rmm/overlays/homelab/ingress.yaml
+++ b/apps/support/tactical-rmm/overlays/homelab/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: tactical-rmm
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
   rules:
     - host: rmm.support4u.se
