fix: Rename persistent volume claim from homeassistant-config to ha-config-restore-old

--- a/apps/home-automation/homeassistant/base/deployment.yaml
+++ b/apps/home-automation/homeassistant/base/deployment.yaml
@@ -62,7 +62,7 @@ spec:
             type: CharDevice
         - name: homeassistant-config
           persistentVolumeClaim:
-            claimName: homeassistant-config
+            claimName: ha-config-restore-old
         - name: homeassistant-media
           persistentVolumeClaim:
             claimName: homeassistant-claim1
