--- a/apps/home-automation/homeassistant/base/pvc-config.yaml
+++ b/apps/home-automation/homeassistant/base/pvc-config.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: homeassistant-config
+  name: ha-config-restore-old
   labels:
     app: homeassistant
 spec:
