--- a/apps/home-automation/homeassistant/base/deployment.yaml
+++ b/apps/home-automation/homeassistant/base/deployment.yaml
@@ -19,17 +19,16 @@ spec:
         io.kompose.service: homeassistant
     spec:
       hostNetwork: true
-      dnsPolicy: None                    # <-- viktiga bytet
+      dnsPolicy: None
       dnsConfig:
         nameservers:
-          - 10.43.0.10                   # CoreDNS ClusterIP
-          - 10.10.10.1                   # (valfritt) pfSense som fallback för internet
+          - 10.43.0.10        # Endast CoreDNS
         searches:
           - home-automation.svc.cluster.local
           - svc.cluster.local
           - cluster.local
         options:
-          - { name: ndots, value: "2" }
+          - { name: ndots, value: "1" }
           - { name: single-request-reopen }
       nodeSelector:
         homelab/homeassistant: "true"
