--- a/apps/support/wordpress/overlays/homelab/kustomization.yaml
+++ b/apps/support/wordpress/overlays/homelab/kustomization.yaml
@@ -3,6 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
-patches:
-  - path: patch-ingress-host.yaml
-  - path: patch-wp-prod.yaml
+  - ingress.yaml
+
