--- a/apps/support/wordpress/base/secret-db.yaml
+++ b/apps/support/wordpress/base/secret-db.yaml
@@ -6,8 +6,9 @@ metadata:
   labels:
     app.kubernetes.io/name: wordpress
     app.kubernetes.io/part-of: wordpress
+type: Opaque
 stringData:
-  mariadb-root-password: "changeme-root"
+  mariadb-root-password: "CHANGE_ME_ROOT"
   mariadb-user: "wpuser"
-  mariadb-password: "changeme-wp"
+  mariadb-password: "CHANGE_ME_USER_PASS"
   mariadb-database: "wordpress"
