--- a/apps/support/wordpress/base/mariadb-statefulset.yaml
+++ b/apps/support/wordpress/base/mariadb-statefulset.yaml
@@ -44,6 +44,8 @@ spec:
                 secretKeyRef:
                   name: wp-db-secret
                   key: mariadb-database
+            - name: MARIADB_AUTO_UPGRADE
+              value: "1"
           ports:
             - name: mysql
               containerPort: 3306
@@ -52,21 +54,29 @@ spec:
               command:
                 - sh
                 - -c
-                - >-
-                  mariadb-admin ping
-                  -h 127.0.0.1
+                - >
+                  mariadb -h 127.0.0.1
                   -u "$MARIADB_USER"
                   -p"$MARIADB_PASSWORD"
-                  --silent
+                  -e "SELECT 1"
             initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 3
             failureThreshold: 6
           livenessProbe:
             exec:
-              command: ["sh","-c","mysqladmin ping -h 127.0.0.1 -uroot -p$MARIADB_ROOT_PASSWORD"]
+              command:
+                - sh
+                - -c
+                - >
+                  mariadb -h 127.0.0.1
+                  -u root
+                  -p"$MARIADB_ROOT_PASSWORD"
+                  -e "SELECT 1"
             initialDelaySeconds: 30
             periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
           resources:
             requests:
               cpu: "100m"
@@ -77,6 +87,33 @@ spec:
           volumeMounts:
             - name: mariadb-data
               mountPath: /var/lib/mysql
+            - name: mariadb-config
+              mountPath: /etc/mysql/conf.d/override.cnf
+              subPath: override.cnf
+          lifecycle:
+            postStart:
+              exec:
+                command:
+                  - sh
+                  - -c
+                  - |
+                    set -eu
+                    # Wait until server is ready
+                    for i in $(seq 1 60); do
+                      mariadb -h 127.0.0.1 -u root -p"$MARIADB_ROOT_PASSWORD" -e "SELECT 1" >/dev/null 2>&1 && break
+                      sleep 1
+                    done
+                    # Create DB/user/privs idempotently (works even if PVC already had data)
+                    mariadb -h 127.0.0.1 -u root -p"$MARIADB_ROOT_PASSWORD" -e "CREATE DATABASE IF NOT EXISTS \`$MARIADB_DATABASE\` CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;"
+                    mariadb -h 127.0.0.1 -u root -p"$MARIADB_ROOT_PASSWORD" -e "CREATE USER IF NOT EXISTS '$MARIADB_USER'@'%' IDENTIFIED BY '$MARIADB_PASSWORD';"
+                    mariadb -h 127.0.0.1 -u root -p"$MARIADB_ROOT_PASSWORD" -e "GRANT ALL PRIVILEGES ON \`$MARIADB_DATABASE\`.* TO '$MARIADB_USER'@'%'; FLUSH PRIVILEGES;"
+      volumes:
+        - name: mariadb-config
+          configMap:
+            name: mariadb-override
+            items:
+              - key: override.cnf
+                path: override.cnf
   volumeClaimTemplates:
     - metadata:
         name: mariadb-data
